# sama5d3-network-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  tcp_server.cpp
docs/: BUILDROOT_SETUP.md  DEPLOYMENT.md  HARDWARE_SETUP.md
src/: build.sh  main.cpp  network_stats.cpp  network_stats.h  tcp_server.h
